--- a/examples/conf/index.html
+++ b/examples/conf/index.html
@@ -1,26 +1,29 @@
 <html>
     <head>
-        <title>Icecube - Index of {{ .Name }}</title>
+        <title>icecube - Index of {{ .Name }}</title>
         <style>tr {font-size: 14px; line-height: 18px;}</style>
     </head>
     <body>
+        <h1>Provided by the icecube file server <a src="https://github.com/deptofdefense/icecube">https://github.com/deptofdefense/icecube</a></h1>
         <h3>Index of {{ .Name }}</h3>
         <hr>
         <table>
             <tr>
+                <th>#</th>
                 <th>Name</th>
                 <th>Last Modified</th>
                 <th>Size</th>
             </tr>
             <tr><td><a href="..">../</a></td></tr>
-            {{ range .DirectoryEntries }}
+            {{ range $i, $de := .DirectoryEntries }}
             <tr>
+                <td>{{ $i }}</td>
                 {{ if .IsDir }}
-                    <td><a href="/{{ .Name }}">{{ .Name }}</a></td>
+                    <td><a href="/{{ $de.Name }}">{{ $de.Name }}</a></td>
                     <td>-</td>
                     <td>-</td>
                 {{ else }}
-                    <td><a href="/{{ .Name }}">{{ .Name }}</a></td>
+                    <td><a href="/{{ $de.Name }}">{{ $de.Name }}</a></td>
                     <td>{{ .ModTime }}</td>
                     <td>{{ .Size }}</td>
                 {{ end }}
