--- a/examples/conf/index.html
+++ b/examples/conf/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>icecube - Index of {{ .Name }}</title>
+        <title>icecube - Index of {{ $.Name }}</title>
         <style>
           tr th, tr td{
             font-size: 14px;
@@ -8,10 +8,10 @@
             text-align: left;
           }
           tr th.id, tr td.id {
-            width: 20px;
+            width: 40px;
           }
           tr th.name, tr td.name {
-            width: 300px;
+            width: 600px;
           }
           tr th.modtime, tr td.modtime {
             width: 200px;
@@ -19,8 +19,8 @@
         </style>
     </head>
     <body>
-        <a href="https://github.com/deptofdefense/icecube"><h5>Powered by icecube (version {{ .IcecubeVersion }})</h5></a>
-        <h3>Index of {{ .Name }}</h3>
+        <a href="https://github.com/deptofdefense/icecube"><h5>Powered by icecube (version {{ $.IcecubeVersion }})</h5></a>
+        <h3>Index of {{ $.Name }}</h3>
         <hr>
         <table>
             <tr>
@@ -29,21 +29,23 @@
                 <th class="modtime">Last Modified</th>
                 <th class="size">Size (bytes)</th>
             </tr>
+            {{ if not (eq $.Name "/") }}
             <tr>
               <td class="id">-</td>
-              <td class="name"><a href="..">../</a></td>
+              <td class="name"><a href="{{ dir $.Name }}">../</a></td>
               <td class="modtime">-</td>
               <td class="size">-</td>
             </tr>
+            {{ end }}
             {{ range $i, $de := .DirectoryEntries }}
             <tr>
                 <td class="id">{{ $i | sumIntegers 1 }}</td>
                 {{ if .IsDir }}
-                    <td class="name"><a href="/{{ $de.Name }}">{{ $de.Name }}</a></td>
+                    <td class="name"><a href="{{ $de.Name }}">{{ concat (trimPrefix $de.Name (concat $.Name "/")) "/" }}</a></td>
                     <td class="modtime">-</td>
                     <td class="size">-</td>
                 {{ else }}
-                    <td class="name"><a href="/{{ $de.Name }}">{{ $de.Name }}</a></td>
+                    <td class="name"><a href="{{ $de.Name }}">{{ trimPrefix $de.Name (concat $.Name "/") }}</a></td>
                     <td class="modtime">{{ formatTime .ModTime "02-Jan-2006 15:04" }}</td>
                     <td class="size">{{ .Size }}</td>
                 {{ end }}
